examples/test/testpolicy7755.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7755
  namespace: namespace310
spec:
  podSelector:
    matchLabels:
      key33: value44
      key23: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value24
          key17: value41
          key39: value31
      podSelector:
        matchLabels:
          key3: value30
